Version 2.0.2-devel
-------------------


Version 2.0.1 [22 May 2016]
---------------------------
- Make named_values.h compile on VS 2015.


Version 2.0.0 [04 Mar 2016]
---------------------------
- Rename iostreams_xml.h to xml_encoded.h.
- Move getpara method from iostreams.h to getpara.h.


Version 1.1.0 [03 Mar 2016]
---------------------------
- Add named_values.h class which can parse named values from a string.
- Add process_args_with_output_template method to process_args.h.


Version 1.0.1 [28 Feb 2016]
---------------------------
- Allow compiling compressor_load and compressor_save in
  the same compilation unit.


Version 1.0.0 [25 Nov 2015]
---------------------------
- Initial public release.