@@ -57,7 +57,7 @@ iostreams that should be called before any output is produced:
 The ``named_values`` class allows parsing of several named values into
 a map. The format of the named values is the following:
 - the values are semicolon separated
-- every value has ``name=value`` format
+- every value has ``name`` or ``name=value`` format
 - the ``value`` can be encoded using one of the following:
   - ``file:file_name``: content of the given file name
   - ``data:length:value``: the value is exactly ``length`` bytes and can include a semicolon
