@@ -1,5 +1,6 @@
 Version 2.0.2-devel
 -------------------
+- Allow named values with name only.
 
 
 Version 2.0.1 [22 May 2016]
